fixed spacing

--- a/blog/_global/css/style.less
+++ b/blog/_global/css/style.less
@@ -16,7 +16,6 @@ a{
 	color: #333;
 	text-decoration:none;
 	font-family: "museo", serif;
-	font-weight: 500;
 	-webkit-transition: color 0.2s ease-in-out;
 	-moz-transition: color 0.2s ease-in-out;
 	transition: color 0.2s ease-in-out;
@@ -150,6 +149,7 @@ article{
 	ul#loader{
 		padding: 0;
 		margin: 0;
+		list-style-type:none;
 		li{
 			width:100%;
 			list-style-type:none;
@@ -213,7 +213,7 @@ footer{
 		margin-top: 0;
 	}
 	#post-title-container{
-		padding:0;
+		padding: 0;
 		background: none;
 		margin: -308px auto 140px auto;
 	}
@@ -227,10 +227,11 @@ footer{
 	ul#social{
 		display: block;
 		width: 380px;
-		margin:30px auto 15px;
-		padding:0;
+		margin: 30px auto 15px;
+		padding: 0;
 		overflow: auto;
 		zoom: 1;
+		list-style-type:none;
 		opacity: 0.2;
 		-webkit-transition:opacity 0.25s ease-in-out;
 		-moz-transition:opacity 0.25s ease-in-out;
@@ -239,8 +240,8 @@ footer{
 			opacity: 1;
 		}
 		li{
-			list-style-type:none;
-			float:left;
+			list-style-type: none;
+			float: left;
 			display: block;
 		}
 		#facebook{
